# compsci-714

./: .gitignore  CLAUDE.md  book.toml  generate_diagrams.py  mathjax-config.js
.github/workflows/: deploy.yml
c++/: .clangd  CMakeLists.txt  geo.cppm  main.cpp  math.cppm
output/: 404.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-edec54c6.js  toc-e56f3d6c.js  toc.html
output/chapters/: 00_exam_analysis.html  00_frequency_map.html  00_teacher_style.html  A_bias_variance.html  A_optimization.html  A_overview.html  A_regularization.html  B_cnn.html  B_mlp.html  B_rnn.html  B_transformer.html  E_metrics.html  english_expressions.html  exam_cheatsheet.html  exam_writing_format.html  mock_exam_1.html  mock_exam_1_answers.html  mock_exam_2.html  mock_exam_2_answers.html  mock_exam_3.html  mock_exam_3_answers.html  output_practice.html  vocabulary.html
src/: SUMMARY.md  intro.md
src/chapters/: 00_exam_analysis.md  00_frequency_map.md  00_teacher_style.md  A_bias_variance.md  A_optimization.md  A_overview.md  A_regularization.md  B_cnn.md  B_mlp.md  B_rnn.md  B_transformer.md  E_metrics.md  a4_cheatsheet.md  english_expressions.md  exam_cheatsheet.md  exam_writing_format.md  mock_exam_1.md  mock_exam_1_answers.md  mock_exam_2.md  mock_exam_2_answers.md  mock_exam_3.md  mock_exam_3_answers.md  output_practice.md  vocabulary.md
